--- a/bibliography.bib
+++ b/bibliography.bib
@@ -89,6 +89,6 @@
   
 @paper{enos2,
   title = {Causal effect of intergroup contact on exclusionary attitudes},
-  author = {R. Enos},
+  author = {R Enos},
   publisher = {Stanford University, CA},
   year = {2014}}
