All done! final typo changes

--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -32,7 +32,7 @@ library(plm)
 ```{r data setup}
 
 # Here I load two of the original datsets, which I will use to replicate the main
-# results of Hopkins, Hilla, and Huber.
+# results of Hopkins, Hill, and Huber.
 
 geo_scope <- read_dta("dataverse_files/HHHDemogThreatRepArchive/GeographicScopeData.dta")
   
@@ -43,12 +43,12 @@ precinct_data <- read_dta("dataverse_files/HHHDemogThreatRepArchive/PrecinctData
 \newpage
 # Abstract {-}
 
-Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of any individual state on the overall outcome was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for change in percent Hispanic. The latter models indicate a stronger relationship between unemployment proportion change and GOP vote share, which suggests an opportunity for further research with alternative theoretical pathways involving economic indicators. 
+Hill, Hopkins, and Huber (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hill, Hopkins and Huber’s results. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of any individual state on the overall outcome was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for change in percent Hispanic. The latter models indicate a stronger relationship between unemployment proportion change and GOP vote share, which suggests an opportunity for further research with alternative theoretical pathways involving economic indicators. 
 
 
 # Introduction {-}
 
-Immigration and demographic changes have become salient in American political discourse in great part due to Trump's campaign for the 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper, [linked here,](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf) can be found online through PNAS.org or Harvard's Hollis system.
+Immigration and demographic changes have become salient in American political discourse in great part due to Trump's campaign for the 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hill, Hopkins, and Huber, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper, [linked here,](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf) can be found online through PNAS.org or Harvard's Hollis system.
 
 
 Using R and RStudio, I succesfully replicated HHH’s results, except for minor discrepancies which do not affect their conclusions [@R]. Some of these discepancies can be associated with the inherent assumptions of the Stata software versus R. The replication process was lengthy and focused mainly on translating local variables from Stata (the coding language in which the original analysis was conducted) into R using the original datasets to construct the main eight models supporting the argument. A step by step replication of the 8 main models and graphics of the paper are included in the appendix. Thanks to the generosity of the authors, the code and data used in this project are available at [Harvard Dataverse](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/J5GCZQ). For more information about this project, please visit my project's Github repo^[[The data and code for this project can be found in Github.](https://github.com/deboragonzalez/gop_voters_hisp_changes)].
@@ -618,7 +618,7 @@ Hispanics comprise a large demographic group that is rapidly growing in the Unit
 \newpage
 # Appendix {-}
 
-Results from Hilla, Hopkins, and Huberc (2019) were successfully replicated. As an example, here is Table 1 from page 4.
+Results from Hill, Hopkins, and Huber (2019) were successfully replicated. As an example, here is Table 1 from page 4.
 
 ### Original Table {-}
 
