--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,6 @@
 @paper{research,
   title = {Local demographic changes and US presidential voting, 2012 to 2016},
-  author = {Seth J. Hilla and Daniel J. Hopkins and Gregory A. Huberc},
+  author = {Seth J. Hill and Daniel J. Hopkins and Gregory A. Huber},
   publisher = {PNAS.org Political Science},
   year = {2019}}
   
